[gd_scene load_steps=4 format=3 uid="uid://c0d7fqeb7jfaq"]

[ext_resource type="Script" path="res://prog122d.gd" id="1_6snkx"]

[sub_resource type="Theme" id="Theme_iaaq0"]
default_font_size = 32

[sub_resource type="Theme" id="Theme_2jrus"]
default_font_size = 32

[node name="prog122d" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6snkx")

[node name="ItemList" type="ItemList" parent="."]
layout_mode = 0
offset_left = 38.0
offset_top = 30.0
offset_right = 1108.0
offset_bottom = 512.0
theme = SubResource("Theme_iaaq0")

[node name="btnCalc" type="Button" parent="."]
layout_mode = 0
offset_left = 39.0
offset_top = 541.0
offset_right = 218.0
offset_bottom = 617.0
theme = SubResource("Theme_2jrus")
text = "Calculate"

[node name="btnClear" type="Button" parent="."]
layout_mode = 0
offset_left = 483.0
offset_top = 541.0
offset_right = 662.0
offset_bottom = 617.0
theme = SubResource("Theme_2jrus")
text = "Clear"

[node name="btnExit" type="Button" parent="."]
layout_mode = 0
offset_left = 930.0
offset_top = 541.0
offset_right = 1109.0
offset_bottom = 617.0
theme = SubResource("Theme_2jrus")
text = "Exit"

[connection signal="pressed" from="btnCalc" to="." method="_on_btn_calc_pressed"]
[connection signal="pressed" from="btnClear" to="." method="_on_btn_clear_pressed"]
[connection signal="pressed" from="btnExit" to="." method="_on_btn_exit_pressed"]
